--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 :root {
   --cor-titulo: #10618E;
   --cor-btn-principal: #0D2B67;
-  --cor-fundo-destaque: #2BB1D7;
+  --cor-fundo-destaque: #8ADAF1;
   --cor-fundo-geral: #EBF8F8;
   --cor-destaque-numeros: #2CDED4;
   --cor-btn-degrade1: #FC8A59;
