--- a/style.css
+++ b/style.css
@@ -83,6 +83,10 @@
   gap: 24px;
 }
 
+.img-pesca {
+  margin-right: 32px;
+}
+
 .p-header h1 {
    font-family: "Ubuntu", sans-serif;
    font-size: 2.5em;
