--- a/geral.css
+++ b/geral.css
@@ -36,6 +36,15 @@ body {
   background: linear-gradient(to right, #E36630, #E4C12C);
 }
 
+.link-interno {
+  display: inline-block;
+  border-bottom: 3px solid #0D2B67;
+  color: #0D2B67;
+  font-weight: bold;
+  font-size: 1em;
+  padding-bottom: 2px;
+}
+
 .link {
   display: inline-block;
   border-bottom: 3px solid #0D2B67;
@@ -45,7 +54,8 @@ body {
   padding-bottom: 2px;
 }
 
-.link:hover {
+.link:hover,
+.link-interno:hover {
   border-bottom: 3px solid var(--cor-titulo);
   color: var(--cor-titulo);
 }
