--- a/case.css
+++ b/case.css
@@ -30,3 +30,11 @@
   align-items: center;
   gap: 20px;
 }
+
+@media (max-width: 768px) {
+  .descricao-case p,
+  .descricao-case h2,
+  .descricao-case h3 {
+    margin-left: 40px;
+  }
+}
